used wildfly, fixed AJP

--- a/httpd.conf
+++ b/httpd.conf
@@ -552,8 +552,8 @@ SSLRandomSeed connect builtin
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 
-<Location /mycalcwebapp>
+<Location /uidapp>
     SetEnv AJP_uid foo
-    ProxyPass ajp://host.docker.internal:8009/mycalcwebapp
-    ProxyPassReverse ajp://host.docker.internal:8009/mycalcwebapp
+    ProxyPass ajp://host.docker.internal:8009/uidapp
+    ProxyPassReverse ajp://host.docker.internal:8009/uidapp
 </Location>
